static/css/custom.css
html, body {
    height: 1vh;
}



body {
    font-family: Arial;
    padding-top: 50px;
}


.main_container {
    margin-top: 0px;
    min-height: calc(100vh - 130px);
}



.navbar-custom {
    background: #328008;
}

.navbar-brand {
    padding: 3px;
}

    .navbar-brand img:hover {
        opacity: .5;
    }

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
    background-color: #818108;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background-color: #818108;
}

.navbar-default .navbar-toggle {
    border-color: #818108;
}

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border-color: #818108;
}

#logo {
    height: 45px;
    width: auto;
}

h1, h2, h3, h4 {
    color: #40ae49
}

.portal_section {
    margin-top: 20px;
}
.section_header {
    border-bottom: #40ae49;
    border-bottom-style: solid;
}

.section_title {
    vertical-align: middle;
    margin: 0px;
    margin-top: 5px;
}

.results_btn {
    margin-top: 25px;
}

footer {
    padding-top: 20px;
    border-top: 1px solid #ededed;
    color: #A9A9A9;
    position: relative;
    bottom: 0px;
    left: 0px;
    text-align: center;
    vertical-align: middle;
    width: 100%;
}

.icon-bar {
    background-color: #fff;
}

.accountform {
    padding-top: 20px;
}

.mymap_wrapper {
    height: 300px;
    width: 300px;
}

#mymap {
    height: 100%;
}


.badge {
    padding-left: 9px;
    padding-right: 9px;
    -webkit-border-radius: 9px;
    -moz-border-radius: 9px;
    border-radius: 9px;
}

.label-warning[href],
.badge-warning[href] {
    background-color: #c67605;
}

.product {
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    width: 150px;
    height: 150px;
    margin: 0 auto;
}

.product_name {
    color: #40ae49;
}
.product_price {
    color: #0084cc;
    font-size: 31.25px;
}

caption p {
    word-wrap: break-word;
}

.row.row-flex {
    display: flex;
    flex-wrap: wrap;
    margin-top: 30px;
}

.panel-default {
    border-color: transparent;
    padding: 0 10px;
}

.panel-body {
    height: 100%;
    border: 1px solid #ddd;
}

.product_description {
    min-height: 40px;
}

.p_color_scale {
    background-image: linear-gradient(to right, white, orange);
}
.p_number_scale {
}

.k_color_scale {
    background-image: linear-gradient(to right, white, purple);
}

.ph_color_scale {
    background-image: linear-gradient(to right, red, green, blue);
}

.lr_ph_color_scale {
    background-image: linear-gradient(to right, orange, white, blue);
}

.k_number_scale {
}

.scale_section {
    text-align: center;
    border-left-style: solid;
    border-left-width:thin;
}

.scale_num {
    padding: 0px;
}

.scale_value {
    font-weight: bold;
    border-left-width: thin;
    padding-left: 3px;
}

.this_index {
    background-color: yellow;
}

table, tr, td, th {
    border-style: solid;
    border-width: thin;
    text-align: center;
}

